pod-security/restricted/require-run-as-non-root-user/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
status:
  ready: true
